[package]
name = "mysql_macros"
description = "Provides simple macro(s) to help when developing with mysql"
version = "0.1.2"
authors = ["Christoffer Lantz"]
keywords = ["mysql", "macro", "helper"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Muqito/mysql_macros"
edition = "2018"

[dependencies]